--- a/environment.yml
+++ b/environment.yml
@@ -68,6 +68,7 @@ dependencies:
   - pip:
     - astroid==2.2.5
     - awscli==1.16.135
+    - beautifulsoup4==4.7.1
     - botocore==1.12.125
     - colorama==0.3.9
     - conllu==1.3.1
@@ -90,6 +91,7 @@ dependencies:
     - regex==2018.1.10
     - rsa==3.4.2
     - scispacy==0.1.0
+    - soupsieve==1.9
     - spacy==2.0.18
     - thinc==6.12.1
     - toolz==0.9.0
