--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,9 @@
 name: armr
 channels:
   - derickl
+  - conda-forge/label/cf201901
   - anaconda
+  - conda-forge
   - defaults
 dependencies:
   - alabaster=0.7.12
@@ -10,32 +12,42 @@ dependencies:
   - attrs=19.1.0
   - babel=2.6.0
   - backcall=0.1.0
-  - bcrypt=3.1.6
+  - backports=1.0
+  - backports.shutil_get_terminal_size=1.0.0
+  - backports_abc=0.5
+  - bcrypt=3.1.4
   - bleach=3.1.0
-  - boto3=1.9.111
-  - ca-certificates=2019.1.23
-  - certifi=2019.3.9
+  - botocore=1.12.112
+  - ca-certificates=2018.11.29
+  - certifi=2018.11.29
   - cffi=1.12.2
   - chardet=3.0.4
   - click=7.0
+  - configparser=3.7.3
   - cryptography=2.6.1
   - dbus=1.13.6
   - decorator=4.4.0
   - defusedxml=0.5.0
   - docutils=0.14
+  - dominate=2.3.5
   - entrypoints=0.3
+  - enum34=1.1.6
   - expat=2.2.6
   - flask=1.0.2
+  - flask-bootstrap=3.3.7.1
   - flask-login=0.4.1
   - flask-sqlalchemy=2.3.2
   - flask-wtf=0.14.2
+  - functools32=3.2.3.2
+  - futures=3.2.0
   - gettext=0.19.8.1
   - glib=2.56.2
   - icu=58.2
   - idna=2.8
   - imagesize=1.1.0
-  - ipykernel=5.1.0
-  - ipython=7.4.0
+  - ipaddress=1.0.22
+  - ipykernel=4.10.0
+  - ipython=4.2.1
   - ipython_genutils=0.2.0
   - ipywidgets=7.4.2
   - itsdangerous=1.1.0
@@ -46,7 +58,7 @@ dependencies:
   - jsonschema=3.0.1
   - jupyter=1.0.0
   - jupyter_client=5.2.4
-  - jupyter_console=6.0.0
+  - jupyter_console=5.1.0
   - jupyter_core=4.4.0
   - libedit=3.1.20181209
   - libffi=3.2.1
@@ -65,6 +77,7 @@ dependencies:
   - pandocfilters=1.4.2
   - paramiko=2.4.2
   - parso=0.3.4
+  - pathlib2=2.3.3
   - pcre=8.43
   - pep8=1.7.1
   - pexpect=4.6.0
@@ -82,9 +95,10 @@ dependencies:
   - pyqt=5.9.2
   - pyrsistent=0.14.11
   - pysocks=1.6.8
-  - python=3.7.1
+  - python=2.7.16
   - python-dateutil=2.8.0
   - python-dotenv=0.10.1
+  - python.app=1.2
   - pytz=2018.9
   - pyzmq=18.0.0
   - qt=5.9.7
@@ -92,11 +106,14 @@ dependencies:
   - readline=7.0
   - requests=2.21.0
   - s3transfer=0.2.0
+  - scandir=1.10.0
   - selenium=3.141.0
   - send2trash=1.5.0
   - setuptools=40.8.0
+  - simplegeneric=0.8.1
   - simplejson=3.16.0
-  - sip=4.19.13
+  - singledispatch=3.4.0.3
+  - sip=4.19.8
   - six=1.12.0
   - snowballstemmer=1.2.1
   - sphinx=1.8.5
@@ -107,9 +124,11 @@ dependencies:
   - terminado=0.8.1
   - testpath=0.4.2
   - tk=8.6.8
-  - tornado=6.0.2
+  - tornado=5.1.1
   - traitlets=4.3.2
+  - typing=3.6.6
   - urllib3=1.24.1
+  - visitor=0.1.3
   - wcwidth=0.1.7
   - webencodings=0.5.1
   - werkzeug=0.14.1
@@ -120,39 +139,5 @@ dependencies:
   - xz=5.2.4
   - zeromq=4.3.1
   - zlib=1.2.11
-  - pip:
-    - astroid==2.2.5
-    - awscli==1.16.135
-    - beautifulsoup4==4.7.1
-    - botocore==1.12.125
-    - colorama==0.3.9
-    - conllu==1.3.1
-    - cymem==2.0.2
-    - cytoolz==0.9.0.1
-    - dill==0.2.9
-    - isort==4.3.16
-    - jupyterlab==0.35.4
-    - jupyterlab-server==0.2.0
-    - lazy-object-proxy==1.3.1
-    - mccabe==0.6.1
-    - msgpack==0.5.6
-    - msgpack-numpy==0.4.3.2
-    - murmurhash==1.0.2
-    - numpy==1.16.2
-    - plac==0.9.6
-    - preshed==2.0.1
-    - pycodestyle==2.5.0
-    - pylint==2.3.1
-    - regex==2018.1.10
-    - rsa==3.4.2
-    - scispacy==0.1.0
-    - soupsieve==1.9
-    - spacy==2.0.18
-    - thinc==6.12.1
-    - toolz==0.9.0
-    - tqdm==4.31.1
-    - typed-ast==1.3.1
-    - ujson==1.35
-    - wrapt==1.10.11
-prefix: /Users/anishdalal/anaconda3/envs/armr
+prefix: /anaconda3/envs/armr
 
