--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,6 @@ channels:
   - defaults
 dependencies:
   - alabaster=0.7.12
-  - appnope=0.1.0
   - asn1crypto=0.24.0
   - attrs=19.1.0
   - babel=2.6.0
@@ -49,8 +48,6 @@ dependencies:
   - jupyter_client=5.2.4
   - jupyter_console=6.0.0
   - jupyter_core=4.4.0
-  - libcxx=4.0.1
-  - libcxxabi=4.0.1
   - libedit=3.1.20181209
   - libffi=3.2.1
   - libiconv=1.15
@@ -142,10 +139,12 @@ dependencies:
     - numpy==1.16.2
     - plac==0.9.6
     - preshed==2.0.1
+    - pyyaml==3.13
     - regex==2018.1.10
     - rsa==3.4.2
     - scispacy==0.1.0
     - spacy==2.0.18
+    - speechrecognition==3.8.1
     - srsly==0.0.5
     - thinc==6.12.1
     - toolz==0.9.0
@@ -154,5 +153,5 @@ dependencies:
     - visitor==0.1.3
     - wasabi==0.2.1
     - wrapt==1.10.11
-prefix: /Users/anishdalal/anaconda3/envs/armr
+prefix: /anaconda3/envs/armr
 
