--- a/environment.yml
+++ b/environment.yml
@@ -48,10 +48,12 @@ dependencies:
   - jupyter_client=5.2.4
   - jupyter_console=6.0.0
   - jupyter_core=4.4.0
+  - krb5=1.16.1
   - libedit=3.1.20181209
   - libffi=3.2.1
   - libiconv=1.15
   - libpng=1.6.36
+  - libpq=11.2
   - libsodium=1.0.16
   - markupsafe=1.1.1
   - mistune=0.8.4
@@ -72,6 +74,7 @@ dependencies:
   - pip=19.0.3
   - prometheus_client=0.6.0
   - prompt_toolkit=2.0.9
+  - psycopg2=2.7.6.1
   - ptyprocess=0.6.0
   - pyasn1=0.4.5
   - pycodestyle=2.5.0
@@ -126,7 +129,6 @@ dependencies:
     - awscli==1.16.140
     - blis==0.2.4
     - botocore==1.12.130
-    - colorama==0.3.9
     - conllu==1.3.1
     - cymem==2.0.2
     - cytoolz==0.9.0.1
@@ -141,7 +143,6 @@ dependencies:
     - preshed==2.0.1
     - pyyaml==3.13
     - regex==2018.1.10
-    - rsa==3.4.2
     - scispacy==0.1.0
     - spacy==2.0.18
     - speechrecognition==3.8.1
@@ -153,5 +154,5 @@ dependencies:
     - visitor==0.1.3
     - wasabi==0.2.1
     - wrapt==1.10.11
-prefix: /anaconda3/envs/armr
+prefix: /Users/tylerursuy/miniconda3/envs/armr
 
